Refactor identity property handling to optimize query checks and improve update logic.